add sticky cart style change & add roboto ttf & change all font-weight 600 to roboto.

--- a/app/code/Aheadworks/Sarp2/view/adminhtml/web/css/subscription.less
+++ b/app/code/Aheadworks/Sarp2/view/adminhtml/web/css/subscription.less
@@ -108,8 +108,9 @@
 
                     .title {
                         font-size: 1.4rem;
-                        font-weight: 600;
+                        font-weight: normal;
                         line-height: 1.36;
+                        font-family: 'roboto-medium';
                     }
 
                     &:after {
