--- a/app/code/Amasty/Base/view/adminhtml/web/css/source/module/_infoblock.less
+++ b/app/code/Amasty/Base/view/adminhtml/web/css/source/module/_infoblock.less
@@ -29,7 +29,8 @@
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 1.25px;
-            font-weight: 600;
+            font-weight: normal;
+            font-family: 'roboto-medium';
             transition: opacity .3s ease-in-out;
         }
 
