--- a/app/code/Codazon/Lookbookpro/view/frontend/web/css/lookbook.less
+++ b/app/code/Codazon/Lookbookpro/view/frontend/web/css/lookbook.less
@@ -27,7 +27,8 @@
             strong.title{
                 //padding: 12px 0px 5px 0px;
                 display: inline-block;
-                font-weight: 600;
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 margin: 5px 0 0px 0px;
                 display: inline-block;
                 font-size: 22px;
@@ -87,7 +88,8 @@
             border-top: none;
 			margin-bottom:20px;
             .title{
-                font-weight: 600;
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 //color: @color_1;
                 margin: 5px 0 0px 15px;
                 display: inline-block;
