--- a/app/code/Codazon/ShippingCostCalculator/view/frontend/web/css/shipping-estimation.less
+++ b/app/code/Codazon/ShippingCostCalculator/view/frontend/web/css/shipping-estimation.less
@@ -107,7 +107,8 @@
             padding: 5px 0px;
             .shipping-title{
                 width: 100%;
-                font-weight: 600;
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 &:before{
                     font-family: FontAwesome;
                     content: "\f105";
