--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Downloadable/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Downloadable/web/css/source/_module.less
@@ -43,7 +43,8 @@
 .samples {
     &-item-title {
         font-size: 1.4rem;
-        font-weight: 600;
+        font-weight: normal;
+        font-family: 'roboto-medium';
         margin: 0 0 @indent__s;
     }
     &-item {
