--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -920,7 +920,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
             font-size: 40px;
         }
 		h4{
-			color:#333333; margin:0;font-weight: 600; font-size:16px; line-height: 19px; white-space: nowrap;
+			color:#333333; margin:0; font-weight: normal; font-size:16px; line-height: 19px; white-space: nowrap; font-family: 'roboto-medium';
 		}
 		p.text{color:#acacac; font-size:15px;}
 	}
