--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/_module.less
@@ -1340,10 +1340,11 @@
 }
 .swatch-attribute-label{
     font-style: normal;
-    font-weight: 500;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .swatch-attribute-selected-option{
     font-style: normal;
@@ -1393,17 +1394,18 @@
 }
 .custom-style-addtocar-qut{
     font-style: normal;
-    font-weight: 500;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-style-qty-plus{
     width: 40px;
     height: 40px;
     background: #FFFFFF;
     border: 1px solid #E1E1E1;
-    padding: 12px;
+    padding: 12px 14px;
     border-left: none;
     color: #333333;
     border-radius: 0 4px 4px 0;
@@ -1413,7 +1415,7 @@
     height: 40px;
     background: #FFFFFF;
     border: 1px solid #E1E1E1;
-    padding: 12px;
+    padding: 12px 14px;
     border-right: none;
     color: #999999;
     border-radius: 4px 0 0 4px;
@@ -1483,18 +1485,20 @@
 .custom-shipping-infobox span:nth-child(1){
     display: block;
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
     margin-bottom: 12px;
+    font-family: 'roboto-medium';
 }
 .custom-shipping-infobox span:nth-child(2){
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-shipping-infobox span:nth-child(3){
     font-style: normal;
@@ -1524,11 +1528,12 @@
 }
 .custom-proterction-title span {
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-style-a-mobile{
     font-style: normal;
@@ -1558,11 +1563,12 @@
 }
 .product-info-main .overview .title .type{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
     margin-bottom: 12px;
+    font-family: 'roboto-medium';
 }
 .custom-style-feature{
     padding-left: 25px ;
@@ -1605,12 +1611,13 @@
 }
 .product.data.items>.item.title>.switch{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #666666;
     padding: 20px  12px 10px 16px;
     height: unset;
+    font-family: 'roboto-medium';
 
 }
 strong#block-related-heading:before {
@@ -1624,10 +1631,11 @@ strong#block-related-heading:before {
 }
 .product.data.items>.item.title:not(.disabled)>.switch:active, .product.data.items>.item.title.active>.switch, .product.data.items>.item.title.active>.switch:focus, .product.data.items>.item.title.active>.switch:hover{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .product.data.items>.item.title>.switch, .tabs-list.product.data.items>.item.title>.switch{
     border: none !important;
@@ -1690,10 +1698,11 @@ strong#block-related-heading:before {
     display: inline-block;
     margin-left: 12px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .review-author .review-details-value{
     font-size: 14px !important;
@@ -1743,10 +1752,11 @@ strong#block-related-heading:before {
 }
 .block .title strong{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .products-grid.products-related{
     padding-left: 16px !important;
