--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
@@ -185,7 +185,7 @@
 		.lib-css(color, @footer__text);
 		&:hover{.lib-css(color, @footer__hover__text);}
 	}
-	p.h5{.lib-css(color, @footer-title__text); font-weight:600; margin-bottom:@indent__m; text-transform:none; }
+	p.h5{color:#333333; font-weight:normal; margin-bottom:@indent__m; text-transform:none; font-family: 'roboto-medium';}
 	.footer-link{ margin-top:-@indent__s;
 		li {
 			padding: @indent__s 0; border-bottom:1px solid @footer__border;
@@ -353,6 +353,7 @@
                 line-height: 21px;
                 color: #333333;
                 font-weight: 500;
+                font-family: 'roboto-medium';
             }
 		}
 		.footer-social{
