--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -836,7 +836,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
             font-size: 40px;
         }
 		h4{
-			color:#333333; margin:0;font-weight: 600; font-size:14px;white-space: nowrap;line-height: 1.5;
+			color:#333333; margin:0; font-weight: normal; font-size:14px; white-space: nowrap; line-height: 1.5; font-family: 'roboto-medium';
 		}
 		p.text{color:#999999; font-size:12px;line-height: 1.5;}
 	}
@@ -1033,6 +1033,11 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
             font-size: 28px;
             color: #fff;
         }
+    }
+}
+.catalog-product-view {
+    #back-top {
+        bottom: 15vh;
     }
 }
 //Category
@@ -1497,7 +1502,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
     }
 
     .space-base {
-        margin-bottom: 4px;
+        margin-bottom: 0;
     }
     /* custom style end */
 
