--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_footer.less
@@ -190,12 +190,13 @@
 		&:hover{.lib-css(color, @footer__hover__text);}
 	}
 	p.h5{
-        .lib-css(color, @footer-title__text);
-        font-weight:600;
+        color:#333333;
+        font-weight:normal;
         margin-bottom:16px;
         text-transform:none;
         font-size: 14px;
         line-height: 16px;
+        font-family: 'roboto-medium';
     }
 	.footer-link{
         margin-top: 0;
