--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -886,7 +886,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
             font-size: 40px;
         }
 		h4{
-			color:#333333; margin:0;font-weight: 600; font-size:14px;white-space: nowrap;line-height: 1.5;
+			color:#333333; margin:0; font-weight: normal; font-size:14px; white-space: nowrap; line-height: 1.5; font-family: 'roboto-medium';
 		}
 		p.text{color:#999999; font-size:12px;line-height: 1.5;}
 	}
@@ -1060,7 +1060,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 }
 #back-top {
     right: 12px;
-    bottom: 10vh;
+    bottom: 6.5vh;
     a{
         background:#33333340 !important;
         border-radius: 4px;
@@ -1544,7 +1544,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
     }
 
     .space-base {
-        margin-bottom: 4px;
+        margin-bottom: 12px;
     }
     /* custom style end */
 
