--- a/app/code/Amasty/Base/view/adminhtml/web/css/source/module/_extensions.less
+++ b/app/code/Amasty/Base/view/adminhtml/web/css/source/module/_extensions.less
@@ -159,8 +159,9 @@
             margin: 0;
             line-height: 15px;
             font-size: 11px;
-            font-weight: 600;
+            font-weight: normal;
             color: #828282;
+            font-family: 'roboto-medium';
         }
 
         .ambase-link {
