--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/product.css
@@ -849,3 +849,83 @@
     }
 }
 /* doublecolumn end */
+
+/* product FAQ */
+.mg-product-block-QA-title {
+    font-size: 18px;
+    line-height: 1.3;
+    color: #333333;
+    font-weight: 500;
+    font-family: 'Roboto-Medium', sans-serif;
+    padding: 20px 0;
+}
+
+.mg-product-block-QA-content {
+    border-top: 1px solid #E1E1E1;
+    cursor: pointer;
+}
+
+.mg-product-block-QA-content:hover .mg-product-block-QA-question .mg-product-block-QA-text {
+    color: #155DA4;
+}
+
+.mg-product-block-QA-content:hover .mg-product-block-QA-question .mg-product-block-QA-icon svg path {
+    fill: #155DA4;
+}
+
+.mg-product-block-QA .mg-product-block-QA-content:last-child {
+    border-bottom: 1px solid #E1E1E1;
+}
+
+.mg-product-block-QA-question {
+    display: grid;
+    grid-template-columns: 95% 5%;
+    padding: 20px 0;
+}
+
+.mg-product-block-QA-question .mg-product-block-QA-text {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    color: #333333;
+    line-height: 1.5;
+    font-family: 'Roboto-Medium', sans-serif;
+}
+
+.mg-product-block-QA-question .mg-product-block-QA-icon {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.mg-product-block-QA-answer {
+    display: none;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #333333;
+    text-decoration: none;
+    padding-bottom: 20px;
+    width: 80%;
+}
+
+@media (max-width: 767px) {
+    .mg-product-block-QA-question .mg-product-block-QA-text {
+        padding-right: 15px;
+        font-size: 16px;
+    }
+
+    .mg-product-block-QA-title {
+        font-size: 20px;
+        padding: 24px 0;
+    }
+
+    .mg-product-block-QA-question {
+        padding: 24px 0;
+    }
+
+    .mg-product-block-QA-answer {
+        padding-bottom: 24px;
+        font-size: 16px;
+        width: 100%;
+    }
+}
+/* end product FAQ */
