--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -42,7 +42,8 @@
                 color: #999999;
             }
             .count {
-                font-weight: 600;
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 font-size: 18px;
                 line-height: 21px;
                 color: #155DA4;
@@ -66,7 +67,8 @@
             .price-wrapper {
                 &:first-child {
                     .price {
-                        font-weight: 600;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                         font-size: 18px;
                         line-height: 21px;
                         color: #155DA4;
@@ -395,7 +397,8 @@
             .price {
                 font-size: 16px;
                 line-height: 19px;
-                font-weight: 600;
+                font-weight: normal;
+                font-family: 'roboto-medium';
             }
             .price-including-tax,
             .price-excluding-tax {
