--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Review/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Review/web/css/source/_module.less
@@ -88,7 +88,8 @@
         }
         strong {
             display: block;
-            font-weight: 600;
+            font-weight: normal;
+            font-family: 'roboto-medium';
 			padding-top:10px;
         }
         margin-bottom: @indent__base;
@@ -96,7 +97,8 @@
     .fieldset &-field-ratings {
         > .label {
             margin-bottom: @indent__s;
-            font-weight: 600;
+            font-weight: normal;
+            font-family: 'roboto-medium';
             padding: 0;
         }
     }
@@ -109,7 +111,8 @@
     }
     &-field-rating {
         .label {
-            font-weight: 600;
+            font-weight: normal;
+            font-family: 'roboto-medium';
         }
         .control {
             margin-top: @indent__s;
