--- a/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductLabel/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Codazon_ProductLabel/web/css/source/_module.less
@@ -4,7 +4,7 @@ ul.cdz-product-labels {position: absolute;  top: 10px;  right: 10px; z-index: 2;
 	right: auto;
 }
 ul.cdz-product-labels li.label-item {background: #0267fe; list-style: none; color: #FFF; font-size: 10px; padding: 2px 5px; min-width:35px;
-text-transform: none; font-weight: 600; margin-bottom: 5px; .abs-borderradius(3px);}
+text-transform: none; font-weight: normal; font-family: 'roboto-medium'; margin-bottom: 5px; .abs-borderradius(3px);}
 ul.cdz-product-labels li.label-item .label-content{text-align: center;}
 ul.cdz-product-labels li.label-item.sale {background-color: #fe0249;}
 ul.cdz-product-labels li.label-item.hot {background-color: #feae02;}
