--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Catalog/web/css/source/_module.less
@@ -1314,10 +1314,11 @@
 }
 .product-options-bottom .price-box .price-container .price, .product-info-price .price-box .price-container .price {
     font-style: normal;
-    font-weight: 600 !important;
+    font-weight: normal;
     font-size: 20px;
     line-height: 23px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .product-info-main .product-add-form{
     padding-top: 0 !important;
@@ -1330,10 +1331,11 @@
 }
 .swatch-attribute-label{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .swatch-option:hover:after, .swatch-option.selected:after{
     display: none;
@@ -1384,19 +1386,20 @@
     width: 80px !important;
 }
 .custom-style-addtocar-qut {
-    font-weight: 600;
+    font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     text-align: left;
     color: #333333;
     margin-bottom: 12px;
+    font-family: 'roboto-medium';
 }
 .custom-style-qty-minus{
     width: 40px;
     height: 40px;
     background: #FFFFFF;
     border: 1px solid #E1E1E1;
-    padding: 12px;
+    padding: 12px 14px;
     border-right: none;
     color: #999999;
     border-radius: 4px 0 0 4px;
@@ -1406,7 +1409,7 @@
     height: 40px;
     background: #FFFFFF;
     border: 1px solid #E1E1E1;
-    padding: 12px;
+    padding: 12px 14px;
     border-left: none;
     color: #333333;
     border-radius: 0 4px 4px 0;
@@ -1478,18 +1481,20 @@
 .custom-shipping-infobox span:nth-child(1){
     display: block;
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
     margin-bottom: 12px;
+    font-family: 'roboto-medium';
 }
 .custom-shipping-infobox span:nth-child(2){
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-shipping-infobox span:nth-child(3){
     font-style: normal;
@@ -1519,11 +1524,12 @@
 }
 .custom-proterction-title span {
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
     line-height: 19px;
     text-align: center;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-style-a-mobile{
     font-style: normal;
@@ -1559,10 +1565,11 @@
 }
 .product-info-main .overview .title .type{
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     color: #333333;
+    font-family: 'roboto-medium';
 }
 .custom-style-feature{
     padding-left: 25px ;
@@ -1576,11 +1583,12 @@
     background: #ffffff !important;
     padding: 20px 0 12px 20px !important;
     font-style: normal !important;
-    font-weight: 600 !important;
+    font-weight: normal !important;
     font-size: 16px  !important;
     line-height: 19px !important;
     color: #333333 !important;
     border-bottom: 1px solid #e1e1e1;
+    font-family: 'roboto-medium' !important;
 }
 .owl-carousel .owl-stage-outer {
     height: inherit;
@@ -1639,11 +1647,12 @@ strong#block-related-heading:before {
     background: #ffffff !important;
     padding: 20px 0 12px 20px !important;
     font-style: normal !important;
-    font-weight: 600 !important;
+    font-weight: normal !important;
     font-size: 16px  !important;
     line-height: 19px !important;
     color: #333333 !important;
     border-bottom: 1px solid #e1e1e1;
+    font-family: 'roboto-medium' !important;
 }
 strong#block-crosssell-heading:before {
     content: " ";
