change homepage image padding.

--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ProductFilter/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ProductFilter/web/css/source/_module.less
@@ -7,5 +7,8 @@
     max-height:none;
     height:auto !important;
     width: 100%;
+    padding: 0;
+}
+.catalog-category-view .product-image-wrapper img{
     padding: 10px;
 }
