add product downloads plugin.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_cart.less
@@ -103,7 +103,8 @@
             .title {
                 strong {
                     .lib-font-size(14);
-                    font-weight: @font-weight__semibold;
+                    font-weight: normal;
+                    font-family: 'roboto-medium';
                 }
             }
             .item-options {
@@ -532,7 +533,8 @@
                     &:before {
                         content: attr(data-th);
                         display: block;
-                        font-weight: @font-weight__semibold;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                         padding-bottom: 10px;
                     }
                 }
