--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
@@ -190,7 +190,8 @@
                 }
             }
             .col-price {
-                font-weight: @font-weight__semibold;
+                font-weight: normal;
+                font-family: 'roboto-medium';
             }
             .row-error {
                 td {
