--- a/app/design/frontend/Codazon/fastest/fashion/Magento_MultipleWishlist/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_MultipleWishlist/web/css/source/_module.less
@@ -154,7 +154,8 @@
             &-select {
                 .wishlist-name {
                     &-label {
-                        font-weight: @font-weight__semibold;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                         &:extend(.abs-colon all);
                     }
                     &-current {
@@ -464,7 +465,8 @@
                     }
                     .current {
                         border-bottom: 3px solid @active__color;
-                        font-weight: @font-weight__semibold;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                     }
                 }
                 .wishlist-name-current {
