--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Review/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Review/web/css/source/_module.less
@@ -315,7 +315,8 @@
     }
     .rating-summary {
         .label {
-            .lib-css(font-weight, @font-weight__semibold);
+            font-weight: normal;
+            font-family: 'roboto-medium';
             .lib-css(margin-right, @indent__s);
         }
     }
@@ -400,7 +401,8 @@
         }
         .review-title {
             .lib-heading(h3);
-            .lib-css(font-weight, @font-weight__semibold);
+            font-weight: normal;
+            font-family: 'roboto-medium';
             .lib-css(margin-bottom, @indent__base);
         }
         .review-content {
