--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Sales/web/css/source/_module.less
@@ -194,7 +194,8 @@
     &-comments {
         margin: 0 0 40px;
         .comment-date {
-            font-weight: @font-weight__semibold;
+            font-weight: normal;
+            font-family: 'roboto-medium';
         }
         .comment-content {
             line-height: 1.6;
@@ -207,7 +208,8 @@
             margin-bottom: 30px;
         }
         .box-title {
-            font-weight: @font-weight__semibold;
+            font-weight: normal;
+            font-family: 'roboto-medium';
         }
         .box-content {
             .payment-method {
