--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_extends.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_extends.less
@@ -680,7 +680,8 @@
 .abs-methods-shipping-title {
     .lib-font-size(16);
     margin-bottom: 15px;
-    .lib-css(font-weight, @font-weight__semibold);
+    font-weight: normal;
+    font-family: 'roboto-medium';
 }
 
 //
@@ -1599,7 +1600,8 @@
         }
         strong {
             display: inline-block;
-            font-weight: @font-weight__semibold;
+            font-weight: normal;
+            font-family: 'roboto-medium';
             padding: 3px 0 0;
         }
         .mark {
