--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -389,7 +389,8 @@
         .fieldset-product-options-inner {
             .legend {
                 border: none;
-                .lib-css(font-weight, @font-weight__semibold);
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 display: inline-block;
                 .lib-font-size(14px);
                 float: none;
@@ -445,7 +446,8 @@
             .price {
                 font-size: 20px;
                 //line-height: 22px;
-                font-weight: @font-weight__semibold;
+                font-weight: normal;
+                font-family: 'roboto-medium';
             }
             .price-including-tax + .price-excluding-tax,
             .weee + .price-excluding-tax,
