--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_Checkout/web/css/source/module/_cart.less
@@ -149,7 +149,8 @@
                 display: none;
                 strong {
                     .lib-font-size(14);
-                    font-weight: @font-weight__semibold;
+                    font-weight: normal;
+                    font-family: 'roboto-medium';
                 }
             }
             .item-options {
@@ -580,7 +581,8 @@
                     &:before {
                         content: attr(data-th);
                         display: block;
-                        font-weight: @font-weight__semibold;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                         padding-bottom: 10px;
                     }
                 }
