--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/_module.less
@@ -250,7 +250,8 @@
             .lib-font-size(14);
             .price {
                 .lib-font-size(14);
-                font-weight: @font-weight__semibold;
+                font-weight: normal;
+                font-family: 'roboto-medium';
                 line-height: 16px;
             }
         }
@@ -380,7 +381,8 @@
     .fieldset-product-options-inner {
         .legend {
             border: none;
-            .lib-css(font-weight, @font-weight__semibold);
+            font-weight: normal;
+            font-family: 'roboto-medium';
             display: inline-block;
             .lib-font-size(14px);
             float: none;
@@ -436,7 +438,8 @@
         .price {
             font-size: 20px;
             //line-height: 22px;
-            font-weight: @font-weight__semibold;
+            font-weight: normal;
+            font-family: 'roboto-medium';
         }
         .price-including-tax + .price-excluding-tax,
         .weee + .price-excluding-tax,
