--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Downloadable/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Downloadable/web/css/source/_module.less
@@ -75,7 +75,8 @@
     }
     .price-including-tax {
         display: inline;
-        font-weight: @font-weight__semibold;
+        font-weight: normal;
+        font-family: 'roboto-medium';
         .lib-font-size(14);
     }
     .field.choice {
