--- a/app/design/frontend/Codazon/fastest/fashion/Magento_GiftCard/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_GiftCard/web/css/source/_module.less
@@ -36,7 +36,8 @@
                     .price {
                         font-size: 22px;
                         line-height: 22px;
-                        font-weight: @font-weight__semibold;
+                        font-weight: normal;
+                        font-family: 'roboto-medium';
                     }
                 }
                 & + .giftcard.form {
