--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
@@ -49,7 +49,8 @@
         }
         .block-subtitle {
             font-size: @font-size__base;
-            font-weight: @font-weight__semibold;
+            font-weight: normal;
+            font-family: 'roboto-medium';
             line-height: 1em;
             padding: @indent__s @indent__s @indent__base;
 			display:none;
