--- a/app/code/Ecopure/Gift/view/frontend/templates/gift.phtml
+++ b/app/code/Ecopure/Gift/view/frontend/templates/gift.phtml
@@ -112,7 +112,7 @@
                 Please visit our website www.water-filter.com and go to the “Warranty Registration” tab to
                 register your product for the warranty.<br/>
 
-                We offer a 30-day money back guarantee, a 1-year manufacturer warranty, and lifetime tech
+                We offer a 1-year manufacturer warranty, and lifetime tech
                 support for all our products. Please be sure to fill in the order information upon registration
                 of your system. For any questions and concerns about the product, please feel free to call or
                 email us. Your satisfaction is our top priority! <br/>
